--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.4.0"
+    "webpack-dev-server": "^4.4.0",
+    "webpack-favicons": "^1.3.8"
   },
   "dependencies": {
     "jquery": "^3.6.0",
