--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "webpack-favicons": "^1.3.8"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "jquery": "^3.6.0",
     "seamless-scroll-polyfill": "^2.1.8",
     "swiper": "^7.3.0",
